--- a/body/index.html
+++ b/body/index.html
@@ -9,7 +9,7 @@
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>        <!--https://boxicons.com/ -->
 
-    <title>Login & Register Page  ->> Code With Patel</title>
+    <title>Login & Register</title>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Contraseña">
                 <a href="#">¿Olvidaste tu contraseña?</a>
-                <button><a href="reserva.html">Ingresar</a></button>
+                <button><a href="Principal.html">Ingresar</a></button>
             </form>
         </div>
 
