--- a/body/index.html
+++ b/body/index.html
@@ -24,6 +24,8 @@
                     <a href="#" class="icons"><i class='bx bxl-linkedin'></i></a>
                 </div>
                 <input type="text" placeholder="Nombre">
+                <input type="Cedula" placeholder="Cedula">
+                <input type="Telefono" placeholder="Telefono">
                 <input type="email" placeholder="E-mail">
                 <input type="password" placeholder="Contraseña">
                 <button>Crear</button>
